--- a/compextAI-executor/requirements.txt
+++ b/compextAI-executor/requirements.txt
@@ -23,7 +23,6 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 multidict==6.1.0
-openai==1.54.1
 propcache==0.2.1
 pydantic==2.9.2
 pydantic_core==2.23.4
@@ -40,3 +39,5 @@ typing_extensions==4.12.2
 urllib3==2.2.3
 uvicorn==0.32.0
 yarl==1.18.3
+litellm==1.55.10
+google-cloud-aiplatform>=1.38.0
