--- a/compextAI-executor/requirements.txt
+++ b/compextAI-executor/requirements.txt
@@ -39,6 +39,6 @@ typing_extensions==4.12.2
 urllib3==2.2.3
 uvicorn==0.32.0
 yarl==1.18.3
-litellm==1.55.10
+litellm
 google-cloud-aiplatform>=1.38.0
 redis==5.2.1
